--- a/templates/compare.html
+++ b/templates/compare.html
@@ -7,7 +7,7 @@
   <form action="{{ url_for('compare', product_name1='search=', product_name2=product_name2) }}" method="post" autocomplete="off" >
     <div class="input-group" style="padding-bottom:20px;">
         <div class="input-group-btn">
-          <button id="searchButton" type="submit" class="btn btn-danger"> <i class="fa fa-search"> </i> </button>
+          <button id="searchButton" type="submit" class="btn btn-danger" style="background-color:#252FA5;border-color:#252FA5"> <i class="fa fa-search"> </i> </button>
         </div>
         <input role="form" name="searchInput1" id="autocomplete" type="text" placeholder="Zoeken..." aria-describedby="button-addon8" class="form-control">
 
@@ -119,7 +119,7 @@
   <form action="{{ url_for('compare', product_name1=product_name1, product_name2='search=') }}" method="post" autocomplete="off" >
     <div class="input-group" style="padding-bottom:20px;">
         <div class="input-group-btn">
-          <button id="searchButton2" type="submit" class="btn btn-danger"> <i class="fa fa-search"> </i> </button>
+          <button id="searchButton2" type="submit" class="btn btn-danger" style="background-color:#252FA5;border-color:#252FA5"> <i class="fa fa-search"> </i> </button>
         </div>
         <input role="form" name="searchInput2" id="autocomplete2" type="text" placeholder="Zoeken..." aria-describedby="button-addon8" class="form-control">
 
