--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <form action="{{ url_for('home') }}" method="post" autocomplete="off" >
       <div class="input-group" style="padding-bottom:20px;">
           <div class="input-group-btn">
-            <button id="searchButton" type="submit" class="btn btn-danger"> <i class="fa fa-search"> </i> </button>
+            <button id="searchButton" type="submit" class="btn btn-danger" style="background-color:#252FA5;border-color:#252FA5"> <i class="fa fa-search"> </i> </button>
           </div>
           <input role="form" name="searchInput" id="autocomplete" type="text" placeholder="Zoeken..." aria-describedby="button-addon8" class="form-control">
 
@@ -81,7 +81,7 @@
 
 {% endblock content %}
 
-{% block favorites%}
+<!--{% block favorites%}
 <div class="col-md-3">
   <div class="content-section">
     <h3>Favorieten</h3>
@@ -104,4 +104,4 @@
   </div>
 </div>
 
-{%endblock favorites%}
+{%endblock favorites%}-->
