--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,13 +33,13 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="/home">Home</a>
-              <a class="nav-item nav-link" href="{{ url_for('profile') }}">Profiel</a>
+              <!--<a class="nav-item nav-link" href="{{ url_for('profile') }}">Profiel</a>-->
             </div>
             <!-- Navbar Right Side -->
-            <div class="navbar-nav">
+            <!--<div class="navbar-nav">
               <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
               <a class="nav-item nav-link" href="{{ url_for('register') }}">Registreer</a>
-            </div>
+            </div>-->
           </div>
         </div>
       </nav>
@@ -51,7 +51,7 @@
 
         {% block content %}{% endblock content %}
 
-        {% block favorites %}{% endblock favorites %}
+        <!--{% block favorites %}{% endblock favorites %}-->
       </div>
     </main>
 
