--- a/static/main.css
+++ b/static/main.css
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 .bg-steel {
-  background-color: #282828;
+  background-color: #252FA5;
 }
 
 .site-header .navbar-nav .nav-link {
