--- a/templates/item.html
+++ b/templates/item.html
@@ -44,7 +44,7 @@
 
                 <i class="heart fa fa-heart-o centered" style="display:flex; justify-content:center;"></i>
               </button>
-              <a href="{{ url_for('compare', product_name1=item.iloc[0]['product-name'], product_name2=item.iloc[0]['product-group']) }}" class="btn btn-danger " style="min-width:60px;max-width:120px;">Vergelijk</a>
+              <a href="{{ url_for('compare', product_name1=item.iloc[0]['product-name'], product_name2=item.iloc[0]['product-group']) }}" class="btn btn-danger " style="min-width:60px;max-width:120px;background-color:#252FA5;border-color:#252FA5">Vergelijk</a>
 
             </div>
         </div>
