--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
           <div class="card-body" style="text-align:center;">
             <h5 class="card-title" style="font-size:18px; font-weight:bold;">{{product.product}}</h5>
             <p class="card-text"></p>
-            <a href="{{ url_for('product_group', product_group=product.url, search='') }}" class="btn btn-secondary">Ga verder</a>
+            <a href="{{ url_for('product_group', product_group=product.url) }}" class="btn btn-secondary">Ga verder</a>
           </div>
         </div>
       </div>
@@ -34,7 +34,7 @@
           <div class="card-body" style="text-align:center;">
             <h5 class="card-title" style="font-size:18px; font-weight:bold;">{{product.product}}</h5>
             <p class="card-text"></p>
-            <a href="{{ url_for('product_group', product_group=product.url, search='') }}" class="btn btn-secondary">Ga verder</a>
+            <a href="{{ url_for('product_group', product_group=product.url) }}" class="btn btn-secondary">Ga verder</a>
           </div>
         </div>
       </div>
@@ -50,7 +50,7 @@
           <div class="card-body" style="text-align:center;">
             <h5 class="card-title" style="font-size:18px; font-weight:bold;">{{product.product}}</h5>
             <p class="card-text"></p>
-            <a href="{{ url_for('product_group', product_group=product.url, search='') }}" class="btn btn-secondary">Ga verder</a>
+            <a href="{{ url_for('product_group', product_group=product.url) }}" class="btn btn-secondary">Ga verder</a>
           </div>
         </div>
       </div>
@@ -66,7 +66,7 @@
           <div class="card-body" style="text-align:center;">
             <h5 class="card-title" style="font-size:18px; font-weight:bold;">{{product.product}}</h5>
             <p class="card-text"></p>
-            <a href="{{ url_for('product_group', product_group=product.url, search='') }}" class="btn btn-secondary">Ga verder</a>
+            <a href="{{ url_for('product_group', product_group=product.url) }}" class="btn btn-secondary">Ga verder</a>
           </div>
         </div>
       </div>
