--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="col-sm-9">
     <form action="{{ url_for('home') }}" method="post" autocomplete="off" >
-      <div class="input-group" style="padding-bottom:20px;">
+      <div class="input-group" style="padding-bottom:10px;">
           <div class="input-group-btn">
             <button id="searchButton" type="submit" class="btn btn-danger" style="background-color:#252FA5;border-color:#252FA5"> <i class="fa fa-search"> </i> </button>
           </div>
@@ -10,14 +10,13 @@
 
         </div>
     </form>
-    <div class="row" style="padding-bottom: 30px;">
+    <div class="row" style="padding-bottom: 10px;">
       {% for product in products[0:3]%}
       <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top" src="{{product.image}}" style="max-width:40%; margin-left:auto; margin-right:auto; padding-top:20px;" alt="Card image cap">
-          <div class="card-body" style="text-align:center;">
-            <h5 class="card-title" style="font-size:18px; font-weight:bold;">{{product.product}}</h5>
-            <p class="card-text"></p>
+          <img class="card-img-top" src="{{product.image}}" style="max-width:55%; margin-left:auto; margin-right:auto; padding-top:10px;" alt="Card image cap">
+          <div class="card-body" style="text-align:center; padding-top:0px;">
+            <h5 class="card-title" style="font-size:19px; font-weight:bold;">{{product.product}}</h5>
             <a href="{{ url_for('product_group', product_group=product.url) }}" class="btn btn-secondary">Ga verder</a>
           </div>
         </div>
@@ -26,14 +25,13 @@
 
     </div>
 
-    <div class="row" style="padding-bottom: 30px;">
+    <div class="row" style="padding-bottom: 10px;">
       {% for product in products[3:6]%}
       <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top" src="{{product.image}}" style="max-width:40%; margin-left:auto; margin-right:auto; padding-top:20px;" alt="Card image cap">
-          <div class="card-body" style="text-align:center;">
-            <h5 class="card-title" style="font-size:18px; font-weight:bold;">{{product.product}}</h5>
-            <p class="card-text"></p>
+          <img class="card-img-top" src="{{product.image}}" style="max-width:55%; margin-left:auto; margin-right:auto; padding-top:10px;" alt="Card image cap">
+          <div class="card-body" style="text-align:center; padding-top:0px;">
+            <h5 class="card-title" style="font-size:19px; font-weight:bold;">{{product.product}}</h5>
             <a href="{{ url_for('product_group', product_group=product.url) }}" class="btn btn-secondary">Ga verder</a>
           </div>
         </div>
@@ -42,14 +40,13 @@
 
     </div>
 
-    <div class="row" style="padding-bottom: 30px;">
+    <div class="row" style="padding-bottom: 10px;">
       {% for product in products[6:9]%}
       <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top" src="{{product.image}}" style="max-width:40%; margin-left:auto; margin-right:auto; padding-top:20px;" alt="Card image cap">
-          <div class="card-body" style="text-align:center;">
-            <h5 class="card-title" style="font-size:18px; font-weight:bold;">{{product.product}}</h5>
-            <p class="card-text"></p>
+          <img class="card-img-top" src="{{product.image}}" style="max-width:55%; margin-left:auto; margin-right:auto; padding-top:10px;" alt="Card image cap">
+          <div class="card-body" style="text-align:center; padding-top:0px;">
+            <h5 class="card-title" style="font-size:19px; font-weight:bold;">{{product.product}}</h5>
             <a href="{{ url_for('product_group', product_group=product.url) }}" class="btn btn-secondary">Ga verder</a>
           </div>
         </div>
@@ -58,14 +55,13 @@
 
     </div>
 
-    <div class="row" style="padding-bottom: 30px;">
+    <div class="row" style="padding-bottom: 10px;">
       {% for product in products[9:12]%}
       <div class="col-sm-4">
         <div class="card">
-          <img class="card-img-top" src="{{product.image}}" style="max-width:40%; margin-left:auto; margin-right:auto; padding-top:20px;" alt="Card image cap">
-          <div class="card-body" style="text-align:center;">
-            <h5 class="card-title" style="font-size:18px; font-weight:bold;">{{product.product}}</h5>
-            <p class="card-text"></p>
+          <img class="card-img-top" src="{{product.image}}" style="max-width:55%; margin-left:auto; margin-right:auto; padding-top:10px;" alt="Card image cap">
+          <div class="card-body" style="text-align:center; padding-top:0px;">
+            <h5 class="card-title" style="font-size:19px; font-weight:bold;">{{product.product}}</h5>
             <a href="{{ url_for('product_group', product_group=product.url) }}" class="btn btn-secondary">Ga verder</a>
           </div>
         </div>
